# unicc

./: .gitattributes  .gitignore  .gitmodules  .hgignore  .hgtags  .travis.sh  .travis.yml  C.xml  CHANGELOG  CHANGELOG.md  JavaScript.xml  LICENSE  Makefile  Makefile.am  Makefile.gnu  Makefile.in  README  README.md  TODO.md  aclocal.m4  bnf.c  bnftest.c  bnftestgen.c  build.c  buildxml.c  codegen.py  configure  configure.ac  debug.c  error.c  etareneg.awk  first.c  gram2c.c  grammar.c  integrity.c  lalr.c  lex.c  list.c  localenv.sh  lr.c  (+47 more)
.github/workflows/: c-cpp.yml  test.yml
doc/: parse.t2t
examples/: bas.par  c.par  dates.par  expr.ast.par  expr.c.par  expr.cpp.par  expr.js.par  expr.py.par  xpl.par
grammars/: es6.bnf  expr-with-assoc.bnf  expr.bnf  json.bnf  logics.bnf  pbnf.bnf  pbnf2.bnf  test.json
lib/: .phorward  LICENSE  Makefile  README.md  array.c  ccl.c  convert.c  dbg.c  dfa.c  direct.c  lex.c  list.c  local.h  memory.c  misc.c  nfa.c  pdoc  phorward.c  phorward.css  phorward.h  phorward.html  pinclude  plex.c  pproto  pregex.c  ptest  ptn.c  regex.c  string.c  system.c  utf8.c  util.c
min_lalr1/: README.md  min_lalr1.c
packaging/win/: prepare.sh  unicc.iss
setup/: .content  AFTERINSTALL.txt  CHANGELOG  CHANGELOG.txt  LICENSE  LICENSE.txt  README  unicc.iss
setup/doc/: .content
setup/etc/: unicc.dtd
setup/examples/: expression.par
setup/examples/xpl/: 99bottles.prg  Makefile  countdown.prg  xpl  xpl.debug.c  xpl.functions.c  xpl.h  xpl.main.c  xpl.par  xpl.program.c  xpl.proto.h  xpl.run.c  xpl.util.c  xpl.value.c
setup/tlt/: C.tlt  README
src/: build.c  buildxml.c  debug.c  error.c  first.c  integrity.c  lalr.c  lex.c  list.c  main.c  mem.c  parse.c  parse.h  parse.min  parse.par  proto.h  rewrite.c  string.c  unicc.h  utils.c  virtual.c  xml.c  xml.h
src/min_lalr1/: README.md
targets/: README.md  c++.tlt  c.tlt  ecmascript.tlt  javascript.tlt  json.tlt  python.tlt
targets/C++.source/: C++.xml  Makefile  README.md  ast.h  defines.h  fn.ast.cpp  fn.clearin.cpp  fn.debug.cpp  fn.getact.cpp  fn.getgo.cpp  fn.getinput.cpp  fn.getsym.cpp  fn.handleerr.cpp  fn.lex.cpp  fn.main.cpp  fn.parse.cpp  fn.stack.cpp  fn.unicode.cpp  mkparser.awk  parser.h  prodinfo.h  syminfo.h  token.h
targets/C.source/: C.xml  LICENSE  Makefile  README.md  STDTPL.xml  ast.h  defines.h  fn.ast.c  fn.clearin.c  fn.debug.c  fn.getact.c  fn.getchar.c  fn.getgo.c  fn.getinput.c  fn.getsym.c  fn.handleerr.c  fn.lex.c  fn.main.c  fn.parse.c  fn.stack.c  fn.syntree.c  fn.unicode.c  mkparser.awk  pcb.h  prodinfo.h  syminfo.h  syntree.h  tables.h  token.h
targets/C.source/unicc4c/: Makefile  UNICC4C.c  clean.par  clean.xml  gen.go.c  main.c  test.xml  unicc4c.h  util.c
targets/tools/: mkparser.awk
templates/: C.tlt  c.tlt  python.tlt
templates/C.source/: README.md  STDTPL.xml  defines.h  fn.debug.c  fn.getact.c  fn.getgo.c  fn.getinput.c  fn.getsym.c  fn.handleerr.c  fn.main.c  fn.parse.c  fn.stack.c  fn.unicode.c  pcb.h  prodinfo.h  syminfo.h  token.h
templates/C.source/unicc4c/: README  calc.xml  gen.act.c  gen.c  gen.lex.c  gen.misc.c  gen.prod.c  output.c  proto.h  test.par
test/: pushparse.c
tlt/: C.tlt  LICENSE  README  README.md
